--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-hash-calendar",
   "version": "1.1.4",
-  "author": "HashTang",
+  "author": "beifusheng",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/beifusheng/vue3-hash-calendar.git"
